Don't recreate the frames when not necessary

This bug was an artifact of the lazy-frames refactoring. The frames should
not be recreated when they are actually the ones we transform.

BUG:472414