libs/ui/tool/strokes/move_stroke_strategy.cpp
@@ -317,8 +317,11 @@ void MoveStrokeStrategy::initStrokeCallback()
                             KUndo2CommandSP undo(new KUndo2Command);
                             const int activeKeyframe = device->keyframeChannel()->activeKeyframeTime();
                             const int targetKeyframe = node->image()->animationInterface()->currentTime();
-                            device->keyframeChannel()->copyKeyframe(activeKeyframe, targetKeyframe, undo.data());
-                            runAndSaveCommand(undo, KisStrokeJobData::BARRIER, KisStrokeJobData::NORMAL);
+
+                            if (activeKeyframe != targetKeyframe) {
+                                device->keyframeChannel()->copyKeyframe(activeKeyframe, targetKeyframe, undo.data());
+                                runAndSaveCommand(undo, KisStrokeJobData::BARRIER, KisStrokeJobData::NORMAL);
+                            }
                         }
                     }
                 }
